// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert displays error message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert displays success message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-success"
  >
    Success!
  </div>
</DocumentFragment>
`;

exports[`Alert does not render when message is empty 1`] = `<DocumentFragment />`;
